[package]
name = "webhooks-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tower = "0.5"
bytes = "1"
http = "1"
http-body-util = "0.1"
subtle = "2"
percent-encoding = "2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
